task-04/mongoex-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongoex-deployment
  labels:
    app: mongoex-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongoex-deployment
  template:
    metadata:
      labels:
        app: mongoex-deployment
    spec:
      containers:
        - name: mongoex
          image: mongo-express
          ports:
            - containerPort: 8081
