task-04/mongo-headless-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo-headless-svc
  labels:
    app: mongo-headless-svc
spec:
  ports:
    - name: mongo-port
      port: 27017
      targetPort: 27017
  clusterIP: None
  selector:
    app: mongo-pod
