task-04/mongoex-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongoex-clusterip
spec:
  selector:
    app: mongoex-deployment
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
