task-04/mongoex-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongoex-svc
spec:
  clusterIP: None
  selector:
    app: mongoex-pod
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
