task-04/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mongoex-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: mongoex.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mongoex-clusterip
            port:
              number: 8081
